...
                        </connections>
                    </view>
                    <tabBarItem key="tabBarItem" title="Bibliothek" image="img_bibliotech" id="J8S-b4-44G"/>
                    <connections>
                        <segue destination="TT7-O3-l2V" kind="presentation" identifier="bibliotech" animates="NO" modalPresentationStyle="fullScreen" id="2gi-Gb-SHi"/>
...
                        </connections>
                    </view>
                    <tabBarItem key="tabBarItem" title="Informationen" image="img_info" id="GE8-or-0xl"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="e8l-Nk-q8r" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                        </connections>
                    </view>
                    <tabBarItem key="tabBarItem" title="VIP Member" image="img_vip" id="MIC-TG-via"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ihA-Gf-6gg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="48d-8a-fFj">
                                <rect key="frame" x="33" y="89" width="25" height="25"/>
                                <accessibility key="accessibilityConfiguration" identifier="sideMenuButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="25" id="AKz-PY-R0w"/>
...
                        </connections>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="img_home" id="r63-ao-GEM">
                        <color key="badgeColor" systemColor="scrollViewTexturedBackgroundColor"/>
                    </tabBarItem>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E - mail *" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="69J-Tc-1nW">
                                <rect key="frame" x="16" y="76" width="288" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="eMailLoginField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Passwort *" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7kR-xI-385">
                                <rect key="frame" x="16" y="130" width="288" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordLoginField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Einloggen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tuo-JT-S0S">
                                <rect key="frame" x="16" y="20" width="288" height="29.5"/>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="25"/>
...
